--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: sticky;
+    top: 0;
 }
 header .logo {
     width: 100%;
@@ -40,7 +42,7 @@ header .logo {
 }
 header .desplegable {
     position: absolute;
-    top: -150px;
+    top: -220px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -96,7 +98,7 @@ header .desplegable #boton-desplegar img{
 
 /* VARIABLES JS */
 .desplegar{
-    transform: translateY(230px);
+    transform: translateY(300px);
 }
 .rotar180{
     transform: rotate(-180deg);
@@ -109,7 +111,6 @@ header .desplegable #boton-desplegar img{
 
 /* MAIN */
 main{
-    margin-top: 65px;
     width: 100%;
     height: auto;
 }
@@ -148,6 +149,7 @@ main section .subtitulo{
 /* TARJETA DE AÑADIR */
 #añadir{
     width: 100%;
+    border-bottom: 2px black double;
 }
 #añadir .contenedor{
     width: 100%;
