--- a/style.css
+++ b/style.css
@@ -178,7 +178,9 @@ main section .subtitulo{
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 100px;
     width: fit-content;
+    max-width: 150px;
     border: 1px black solid;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     background-color: rgba(255, 255, 255, 0.937);
@@ -203,8 +205,9 @@ main section .subtitulo{
 #añadir .contenedor .añadir-tarjeta .tarjeta #atCorreo{
     margin: 10px 6px 5px 6px;
     color: rgb(165, 165, 165);
+    word-wrap: break-word;
 }
-#añadir .contenedor .añadir-tarjeta #btn-tarjeta{
+#añadir .contenedor .añadir-tarjeta #btnAgregar{
     margin: 10px;
     padding: 5px;
     border: 1px black solid;
