--- a/style.css
+++ b/style.css
@@ -178,9 +178,7 @@ main section .subtitulo{
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 100px;
-    width: fit-content;
-    max-width: 150px;
+    width: 150px;
     border: 1px black solid;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     background-color: rgba(255, 255, 255, 0.937);
