--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 /* HEADER */
 header {
     width: 100%;
-    height: 80px;
+    height: 10vh;
     background-color: var(--color-gris);
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@ header {
 }
 header .logo {
     width: 100%;
-    height: 80px;
+    height: 10vh;
     background-color: #405059;
     box-shadow: 5px 0 5px black;
     margin: 0;
@@ -44,7 +44,7 @@ header .logo {
 }
 header .desplegable {
     position: absolute;
-    top: -220px;
+    top: -26vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -53,9 +53,6 @@ header .desplegable {
     transition: all 300ms ease-in-out;
 
     z-index: 1;
-}
-header .desplegable {
-    transition: all 300ms ease-in-out ;
 }
 header .desplegable .nav-bar{
     width: 100%;
@@ -100,7 +97,7 @@ header .desplegable #boton-desplegar img{
 
 /* VARIABLES JS */
 .desplegar{
-    transform: translateY(300px);
+    transform: translateY(35vh);
 }
 .rotar180{
     transform: rotate(-180deg);
@@ -114,11 +111,11 @@ header .desplegable #boton-desplegar img{
 /* MAIN */
 main{
     width: 100%;
-    height: auto;
 }
 main #inicio{
+    height: 90vh;
     width: inherit;
-    padding: 50px 0;
+    padding: 5px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -135,6 +132,7 @@ main #inicio #bienvenida{
 main #inicio .texto-bienvenida{
     margin: 30px auto;
     padding: 0 30px;
+    max-width: 80vw;
     font-size: 1.5rem;
     text-align: center;
     color: white;
