--- a/style.css
+++ b/style.css
@@ -240,8 +240,32 @@ main section .subtitulo{
 }
 
 /* Seccion de Gestion de invitados */
+#btnLimpiarLS{
+    width: fit-content;
+    padding: 10px;
+    background-color: var(--color-verde);
+    border-radius: 10%;
+    border: 1px var(--color-turquesa) solid;
+    box-shadow: 1px 1px 2px var(--color-gris);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    transition: all 50ms ease-in-out;
+}
+#btnLimpiarLS:hover{
+    transform: scale(1.05);
+    box-shadow: 3px 3px 3px var(--color-gris);
+}
+#btnLimpiarLS:active{
+    box-shadow: none;
+    transform: scale(1);
+}
 #lista{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #lista .contenedorInvitados{
     width: 80vw;
