--- a/style/style.css
+++ b/style/style.css
@@ -271,8 +271,9 @@ main section .subtitulo{
 }
 
 /* Seccion de Gestion de invitados */
-#btnLimpiarLS{
+.btnLista{
     width: fit-content;
+    margin: 20px;
     padding: 10px;
     background-color: var(--color-verde);
     border-radius: 10%;
@@ -284,11 +285,11 @@ main section .subtitulo{
     cursor: pointer;
     transition: all 50ms ease-in-out;
 }
-#btnLimpiarLS:hover{
+.btnLista:hover{
     transform: scale(1.05);
     box-shadow: 3px 3px 3px var(--color-gris);
 }
-#btnLimpiarLS:active{
+.btnLista:active{
     box-shadow: none;
     transform: scale(1);
 }
@@ -311,6 +312,11 @@ main section .subtitulo{
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+#lista .botones {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 /* TARJETA */
 #lista .contenedorInvitados div .contenedorRender{
@@ -356,22 +362,3 @@ main section .subtitulo{
     color: rgb(165, 165, 165);
     word-wrap: break-word;
 }
-/* BOTONES DE EDICION  *los saque temporalmente* */
-/* #lista .contenedorInvitados div .editarBotones{
-    z-index: 2;
-    position: relative;
-    left: -20px;
-    transition: all 150px ease-in-out;
-    display: none;
-}
-#lista .contenedorInvitados div .editarBotones .btn{
-    margin: 10px 0;
-    padding: 5px 10px;
-    border: 1px black solid;
-    border-radius: 15px 5px 5px 15px;
-    background-color: var(--color-amarillo);
-    cursor: pointer;
-}
-#lista .contenedorInvitados div .editarBotones .btn:hover{
-    background-color: var(--color-anaranjado);
-} */
